# ble_sensor_adapter

./: .codespellrc  .gitignore  CLAUDE.md  FIXES_SUMMARY.md  README.md  hacs.json  home_assistant_best_practices.md  info.md  main.py  pyproject.toml  pytest.ini  requirements_test.txt
.devcontainer/: devcontainer.json
ble_sensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
custom_components/ble_scanner/: __init__.py  config_flow.py  const.py  coordinator.py  errors.py  manifest.json  sensor.py  strings.json
custom_components/ble_scanner/devices/: __init__.py  base.py  petkit_fountain.py  s_06_soil_tester.py
custom_components/ble_scanner/parsers/: __init__.py  base.py  petkit_fountain.py  s_06_soil_tester.py
custom_components/ble_sensor/: __init__.py  binary_sensor.py  bluetooth.py  config_flow.py  const.py  coordinator.py  device.py  diagnostics.py  entity.py  manifest.json  select.py  sensor.py  switch.py  system_health.py
custom_components/ble_sensor/device_types/: __init__.py  base.py  device_type_1.py  petkit_fountain.py  soil_tester.py
custom_components/ble_sensor/devices/: __init__.py  base.py  device.py  petkit_fountain.py  soil_tester.py
custom_components/ble_sensor/entities/: binary_sensor.py  select.py  sensor.py  switch.py
homeassistant/: config_entries.py  const.py  data_entry_flow.py  exceptions.py
homeassistant/helpers/: dispatcher.py  entity.py  event.py  update_coordinator.py
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_e2e_workflow.py  test_integration.py  test_select.py  test_sensor.py
tests/mock_homeassistant/: config_entries.py  const.py  core.py  exceptions.py
tests/test_devices/: test_petkit_fountain.py
(+35 files in other folders)
