[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ble_sensor"
version = "0.1.0"
description = "BLE Sensor integration for Home Assistant"
readme = "README.md"
authors = [{ name = "Phil Hennel" }]
requires-python = ">=3.12.0"
dependencies = [
    "bleak-retry-connector>=3.10.0",
    "bleak>=0.22.3",
    "homeassistant>=2024.12.5",
    "voluptuous>=0.15.2",
    "pytest==8.3.4",
    "pyserial>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --cov=custom_components.ble_sensor --cov-report=term-missing"
